--- a/objc/digademo/iPhone.storyboard
+++ b/objc/digademo/iPhone.storyboard
@@ -46,7 +46,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="J91-z0-CYr">
-                                <rect key="frame" x="114" y="164" width="92" height="37"/>
+                                <rect key="frame" x="114" y="221" width="92" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="My Data">
@@ -75,11 +75,36 @@
                                     <action selector="gotoPost:" destination="VMu-1R-jdw" eventType="touchUpInside" id="t8c-oh-WSU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kdJ-xG-vZa">
+                                <rect key="frame" x="98" y="103" width="125" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Access Token">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="getAccessToken:" destination="VMu-1R-jdw" eventType="touchUpInside" id="dlS-Gi-brt"/>
+                                    <action selector="popularClicked:" destination="VMu-1R-jdw" eventType="touchUpInside" id="yRR-cY-Onk"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="access_token" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="PSH-IL-YZs">
+                                <rect key="frame" x="16" y="159" width="288" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Login To Mindtalk" id="uWg-fk-WX0"/>
                     <connections>
+                        <outlet property="atButton" destination="kdJ-xG-vZa" id="hmv-ZT-Nze"/>
+                        <outlet property="atLabel" destination="PSH-IL-YZs" id="Jbg-9U-7ku"/>
                         <outlet property="loginButton" destination="FqI-vH-dbB" id="Dnn-uH-8tU"/>
                         <outlet property="popularButton" destination="J91-z0-CYr" id="8W7-n0-7kh"/>
                         <segue destination="TVK-B5-ft7" kind="push" identifier="pushToStream" id="uvK-ty-Xqm"/>
@@ -191,7 +216,7 @@
         <class className="LoginViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
             <relationships>
-                <relationship kind="action" name="atClicked:"/>
+                <relationship kind="action" name="getAccessToken:"/>
                 <relationship kind="action" name="gotoPost:"/>
                 <relationship kind="action" name="loginClicked:"/>
                 <relationship kind="action" name="popularClicked:"/>
